# DiffZPC-0.1

./: CMakeLists.txt  README.md
examples/forward_cuda/: higher_order_cross_derivatives.cu  higher_order_directional_derivatives.cu  multi_variable_function.cu  multi_variable_function_with_params.cu  single_variable_function.cu
examples/forward_omp/: directional_taylor_series.cu  multi_variable_function.cu  multi_variable_function_with_params.cu  single_variable_function.cu  single_variable_function_custom_scalar.cu
examples/reverse_omp/: conditional.cu  higher_order_derivatives_multi_variable_function.cu  higher_order_derivatives_single_variable_function.cu  multi_variable_function.cu  multi_variable_function_with_params.cu  single_variable_function.cu
zpc/include/zensim/: CMakeLists.txt
zpc/include/zensim/autodiff/common/: meta.hpp  numbertraits.hpp  vectortraits.hpp
zpc/include/zensim/autodiff/forward/: dual.hpp  real.hpp
zpc/include/zensim/autodiff/forward/dual/: dual.hpp
zpc/include/zensim/autodiff/forward/real/: real.hpp
zpc/include/zensim/autodiff/forward/utils/: derivative.hpp  taylorseries.hpp
zpc/include/zensim/autodiff/reverse/: var.hpp
zpc/include/zensim/autodiff/reverse/var/: var.hpp
zpc/include/zensim/container/: Vector.hpp
zpc/include/zensim/types/: Tuple.h
zpc/include/zensim/zpc_tpls/: LICENSE
